--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,368 +1,1 @@
-<p-menubar [model]="items">
-  <ng-template #start>
-    <img
-      src="assets/images/joystick.png"
-      alt=""
-      class="" />
-  </ng-template>
-  <ng-template
-    #item
-    let-item
-    let-root="root">
-    <a
-      pRipple
-      class="flex items-center p-menubar-item-link">
-      <span>{{ item.label }}</span>
-      <p-badge
-        *ngIf="item.badge"
-        [ngClass]="{ 'ml-auto': !root, 'ml-2': root }"
-        [value]="item.badge" />
-      <span
-        *ngIf="item.shortcut"
-        class="ml-auto border border-surface rounded bg-emphasis text-muted-color text-xs p-1"
-        >{{ item.shortcut }}</span
-      >
-      <i
-        *ngIf="item.items"
-        [ngClass]="['ml-auto pi', root ? 'pi-angle-down' : 'pi-angle-right']"></i>
-    </a>
-  </ng-template>
-</p-menubar>
-
-<div class="grid grid-nogutter surface-section text-800">
-  <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center">
-    <section>
-      <span class="block text-6xl font-bold mb-1">Craft the Game Rooms</span>
-      <div class="text-6xl text-primary font-bold mb-3">Your Players Crave to Explore</div>
-      <p class="mt-0 mb-4 text-700 line-height-3">
-        Experience unforgettable gaming moments in your own private room – where fun meets comfort
-        and excitement.
-      </p>
-
-      <button
-        pButton
-        pRipple
-        label="Get started"
-        type="button"
-        class="mr-3 p-button-raised"></button>
-      <button
-        pButton
-        pRipple
-        label="Contact us"
-        type="button"
-        class="p-button-outlined"></button>
-    </section>
-  </div>
-  <div class="col-12 md:col-6 overflow-hidden">
-    <img
-      src="assets/images/hero.png"
-      alt="Image"
-      class="md:ml-auto block md:h-full"
-      style="clip-path: polygon(8% 0, 100% 0%, 100% 100%, 0 100%)" />
-  </div>
-</div>
-
-<div class="grid grid-nogutter surface-section text-800">
-  <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center">
-    <section>
-      <h2 class="block text-6xl font-bold mb-1">Craft the Game Rooms</h2>
-
-      <p class="mt-0 mb-4 text-700 line-height-3">
-        Experience unforgettable gaming moments in your own private room – where fun meets comfort
-        and excitement. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla molestias
-        velit, error delectus eaque facilis dicta veniam libero porro, reprehenderit rem ipsam
-        minima autem aut molestiae eos aliquam ab sint.
-      </p>
-    </section>
-  </div>
-  <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center">
-    <p-image
-      src="assets/images/3d-rendering-retro-gry-ikon-projektowania_23-2151866403.avif"
-      alt="Image"
-      width="250" />
-  </div>
-</div>
-
-<div class="grid grid-nogutter surface-section text-800">
-  <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center">
-    <p-image
-      src="assets/images/3d-rendering-retro-gry-ikon-projektowania_23-2151866403.avif"
-      alt="Image"
-      width="250" />
-  </div>
-  <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center">
-    <section>
-      <h2 class="block text-6xl font-bold mb-1">Craft the Game Rooms</h2>
-      <p class="mt-0 mb-4 text-700 line-height-3">
-        Experience unforgettable gaming moments in your own private room – where fun meets comfort
-        and excitement. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla molestias
-        velit, error delectus eaque facilis dicta veniam libero porro, reprehenderit rem ipsam
-        minima autem aut molestiae eos aliquam ab sint.
-      </p>
-    </section>
-  </div>
-</div>
-
-<div class="surface-section px-4 py-8 md:px-6 lg:px-8 text-center">
-  <div class="mb-3 font-bold text-3xl">
-    <span class="text-900">One Product, </span>
-    <span class="text-blue-600">Many Solutions</span>
-  </div>
-  <div class="text-700 mb-6">
-    Ac turpis egestas maecenas pharetra convallis posuere morbi leo urna.
-  </div>
-  <div class="grid">
-    <div class="col-12 md:col-4 mb-4 px-5">
-      <span
-        class="p-3 shadow-2 mb-3 inline-block surface-card"
-        style="border-radius: 10px">
-        <i class="pi pi-desktop text-4xl text-blue-500"></i>
-      </span>
-      <div class="text-900 text-xl mb-3 font-medium">Built for Developers</div>
-      <span class="text-700 line-height-3"
-        >Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-        nulla pariatur.</span
-      >
-    </div>
-    <div class="col-12 md:col-4 mb-4 px-5">
-      <span
-        class="p-3 shadow-2 mb-3 inline-block surface-card"
-        style="border-radius: 10px">
-        <i class="pi pi-lock text-4xl text-blue-500"></i>
-      </span>
-      <div class="text-900 text-xl mb-3 font-medium">End-to-End Encryption</div>
-      <span class="text-700 line-height-3"
-        >Risus nec feugiat in fermentum posuere urna nec. Posuere sollicitudin aliquam ultrices
-        sagittis.</span
-      >
-    </div>
-    <div class="col-12 md:col-4 mb-4 px-5">
-      <span
-        class="p-3 shadow-2 mb-3 inline-block surface-card"
-        style="border-radius: 10px">
-        <i class="pi pi-check-circle text-4xl text-blue-500"></i>
-      </span>
-      <div class="text-900 text-xl mb-3 font-medium">Easy to Use</div>
-      <span class="text-700 line-height-3"
-        >Ornare suspendisse sed nisi lacus sed viverra tellus. Neque volutpat ac tincidunt vitae
-        semper.</span
-      >
-    </div>
-    <div class="col-12 md:col-4 mb-4 px-5">
-      <span
-        class="p-3 shadow-2 mb-3 inline-block surface-card"
-        style="border-radius: 10px">
-        <i class="pi pi-globe text-4xl text-blue-500"></i>
-      </span>
-      <div class="text-900 text-xl mb-3 font-medium">Fast & Global Support</div>
-      <span class="text-700 line-height-3"
-        >Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus.</span
-      >
-    </div>
-    <div class="col-12 md:col-4 mb-4 px-5">
-      <span
-        class="p-3 shadow-2 mb-3 inline-block surface-card"
-        style="border-radius: 10px">
-        <i class="pi pi-github text-4xl text-blue-500"></i>
-      </span>
-      <div class="text-900 text-xl mb-3 font-medium">Open Source</div>
-      <span class="text-700 line-height-3"
-        >Nec tincidunt praesent semper feugiat. Sed adipiscing diam donec adipiscing tristique risus
-        nec feugiat.
-      </span>
-    </div>
-    <div class="col-12 md:col-4 md:mb-4 mb-0 px-3">
-      <span
-        class="p-3 shadow-2 mb-3 inline-block surface-card"
-        style="border-radius: 10px">
-        <i class="pi pi-shield text-4xl text-blue-500"></i>
-      </span>
-      <div class="text-900 text-xl mb-3 font-medium">Trusted Securitty</div>
-      <span class="text-700 line-height-3"
-        >Mattis rhoncus urna neque viverra justo nec ultrices. Id cursus metus aliquam
-        eleifend.</span
-      >
-    </div>
-  </div>
-</div>
-<div class="surface-ground px-4 py-8 md:px-6 lg:px-8">
-  <div class="text-900 font-bold text-6xl mb-4 text-center">Pricing Plans</div>
-  <div class="text-700 text-xl mb-6 text-center line-height-3">
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit numquam eligendi quos.
-  </div>
-
-  <div class="grid">
-    <div class="col-12 lg:col-4">
-      <div class="p-3 h-full">
-        <div
-          class="shadow-2 p-3 h-full flex flex-column surface-card"
-          style="border-radius: 6px">
-          <div class="text-900 font-medium text-xl mb-2">Basic</div>
-          <div class="text-600">Plan description</div>
-          <hr class="my-3 mx-0 border-top-1 border-none surface-border" />
-          <div class="flex align-items-center">
-            <span class="font-bold text-2xl text-900">$9</span>
-            <span class="ml-2 font-medium text-600">per month</span>
-          </div>
-          <hr class="my-3 mx-0 border-top-1 border-none surface-border" />
-          <ul class="list-none p-0 m-0 flex-grow-1">
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Arcu vitae elementum</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Dui faucibus in ornare</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Morbi tincidunt augue</span>
-            </li>
-          </ul>
-          <hr class="mb-3 mx-0 border-top-1 border-none surface-border mt-auto" />
-          <button
-            pButton
-            pRipple
-            label="Buy Now"
-            class="p-3 w-full mt-auto"></button>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-12 lg:col-4">
-      <div class="p-3 h-full">
-        <div
-          class="shadow-2 p-3 h-full flex flex-column surface-card"
-          style="border-radius: 6px">
-          <div class="text-900 font-medium text-xl mb-2">Premium</div>
-          <div class="text-600">Plan description</div>
-          <hr class="my-3 mx-0 border-top-1 border-none surface-border" />
-          <div class="flex align-items-center">
-            <span class="font-bold text-2xl text-900">$29</span>
-            <span class="ml-2 font-medium text-600">per month</span>
-          </div>
-          <hr class="my-3 mx-0 border-top-1 border-none surface-border" />
-          <ul class="list-none p-0 m-0 flex-grow-1">
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Arcu vitae elementum</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Dui faucibus in ornare</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Morbi tincidunt augue</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Duis ultricies lacus sed</span>
-            </li>
-          </ul>
-          <hr class="mb-3 mx-0 border-top-1 border-none surface-border" />
-          <button
-            pButton
-            pRipple
-            label="Buy Now"
-            class="p-3 w-full"></button>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-12 lg:col-4">
-      <div class="p-3 h-full">
-        <div
-          class="shadow-2 p-3 flex flex-column surface-card"
-          style="border-radius: 6px">
-          <div class="text-900 font-medium text-xl mb-2">Enterprise</div>
-          <div class="text-600">Plan description</div>
-          <hr class="my-3 mx-0 border-top-1 border-none surface-border" />
-          <div class="flex align-items-center">
-            <span class="font-bold text-2xl text-900">$49</span>
-            <span class="ml-2 font-medium text-600">per month</span>
-          </div>
-          <hr class="my-3 mx-0 border-top-1 border-none surface-border" />
-          <ul class="list-none p-0 m-0 flex-grow-1">
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Arcu vitae elementum</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Dui faucibus in ornare</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Morbi tincidunt augue</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Duis ultricies lacus sed</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Imperdiet proin</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span class="text-900">Nisi scelerisque</span>
-            </li>
-          </ul>
-          <hr class="mb-3 mx-0 border-top-1 border-none surface-border" />
-          <button
-            pButton
-            pRipple
-            label="Buy Now"
-            class="p-3 w-full p-button-outlined"></button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="p-6">
-  <div class="text-900 font-bold text-6xl mb-4 text-center">fAQU</div>
-  <div class="text-700 text-xl mb-6 text-center line-height-3">fAQU</div>
-  <p-accordion value="0">
-    <p-accordion-panel value="0">
-      <p-accordion-header>Header I</p-accordion-header>
-      <p-accordion-content>
-        <p class="m-0">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-          sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est laborum.
-        </p>
-      </p-accordion-content>
-    </p-accordion-panel>
-
-    <p-accordion-panel value="1">
-      <p-accordion-header>Header II</p-accordion-header>
-      <p-accordion-content>
-        <p class="m-0">
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-          laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-          aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-          voluptatem sequi nesciunt. Consectetur, adipisci velit, sed quia non numquam eius modi.
-        </p>
-      </p-accordion-content>
-    </p-accordion-panel>
-
-    <p-accordion-panel value="2">
-      <p-accordion-header>Header III</p-accordion-header>
-      <p-accordion-content>
-        <p class="m-0">
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-          laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-          aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-          voluptatem sequi nesciunt. Consectetur, adipisci velit, sed quia non numquam eius modi.
-        </p>
-      </p-accordion-content>
-    </p-accordion-panel>
-  </p-accordion>
-</div>
+<home-page></home-page>
