add footer and booking-panel component

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -17,8 +17,8 @@
       <button
         pButton
         pRipple
-        label="Contact us"
-        aria-label="Contact us"
+        label="Join us"
+        aria-label="Join us"
         type="button"
         class="p-button-outlined"></button>
     </section>
