--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<footer class="bg-dark text-white py-4">
+  <div class="row mt-4">
+    <div class="col text-center">
+      <p class="mb-0">&copy; 2025 Game bar. All rights reserved.</p>
+    </div>
+  </div>
+</footer>
