--- a/src/app/components/pricing/pricing.component.html
+++ b/src/app/components/pricing/pricing.component.html
@@ -36,6 +36,7 @@
           <button
             pButton
             pRipple
+            (click)="showBookPanel = !showBookPanel"
             label="Buy Now"
             aria-label="Buy Now"
             class="p-3 w-full mt-auto"></button>
@@ -78,6 +79,7 @@
           <button
             pButton
             pRipple
+            (click)="showBookPanel = !showBookPanel"
             label="Buy Now"
             aria-label="Buy Now"
             class="p-3 w-full"></button>
@@ -128,6 +130,7 @@
           <button
             pButton
             pRipple
+            (click)="showBookPanel = !showBookPanel"
             label="Buy Now"
             aria-label="Buy Now"
             class="p-3 w-full p-button-outlined"></button>
@@ -136,3 +139,5 @@
     </div>
   </div>
 </div>
+
+<booking-panel [showBookPanel]="showBookPanel"></booking-panel>
