added scrolling navigation

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,4 +1,6 @@
-<div class="grid grid-nogutter surface-section text-800">
+<div
+  class="grid grid-nogutter surface-section text-800"
+  id="about-us">
   <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center">
     <section>
       <h2 class="block text-6xl font-bold mb-1">Experience the Ultimate Game Bar</h2>
