--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,4 +1,6 @@
-<div class="p-6">
+<div
+  class="p-6"
+  id="faq">
   <div class="text-700 font-bold text-6xl mb-4 text-center">Frequently asked questions</div>
   <p-accordion value="0">
     <p-accordion-panel value="0">
