--- a/src/app/components/offer/offer.component.html
+++ b/src/app/components/offer/offer.component.html
@@ -1,4 +1,6 @@
-<div class="surface-section px-4 py-8 md:px-6 lg:px-8 text-center">
+<div
+  class="surface-section px-4 py-8 md:px-6 lg:px-8 text-center"
+  id="our-offer">
   <div class="mb-3 font-bold text-3xl">
     <span class="text-900">One Product, </span>
     <span class="text-blue-600">Many Solutions</span>
