--- a/src/app/components/pricing/pricing.component.html
+++ b/src/app/components/pricing/pricing.component.html
@@ -1,4 +1,6 @@
-<div class="surface-ground px-4 py-8 md:px-6 lg:px-8">
+<div
+  class="surface-ground px-4 py-8 md:px-6 lg:px-8"
+  id="pricing-plans">
   <div class="text-900 font-bold text-6xl mb-4 text-center">Pricing Plans</div>
   <div class="text-700 text-xl mb-6 text-center line-height-3">
     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit numquam eligendi quos.
@@ -140,4 +142,6 @@
   </div>
 </div>
 
-<booking-panel [showBookPanel]="showBookPanel"></booking-panel>
+<!-- <booking-panel
+  [showBookPanel]="showBookPanel"
+  [bookRoomForm]="bookRoomForm.controls" /> -->
