--- a/src/app/components/booking-panel/booking-panel.component.html
+++ b/src/app/components/booking-panel/booking-panel.component.html
@@ -1,4 +1,4 @@
-@if (showBookPanel) {
+@if (showBookPanel()) {
   <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
     <div>
       <label
@@ -8,6 +8,7 @@
       >
       <input
         id="name"
+        formControlName="bookRoomForm.name"
         type="text"
         placeholder="Name"
         pInputText
@@ -20,6 +21,7 @@
       >
       <input
         id="surname"
+        formControlName="bookRoomForm.surname"
         type="surname"
         placeholder="Surname"
         pInputText
