--- a/src/app/components/join-us/join-us.component.html
+++ b/src/app/components/join-us/join-us.component.html
@@ -1,4 +1,6 @@
-<div class="surface-section px-4 py-8 md:px-6 lg:px-8">
+<div
+  class="surface-section px-4 py-8 md:px-6 lg:px-8"
+  id="join-us">
   <div class="text-700 text-center">
     <div class="text-blue-600 font-bold mb-3">
       <i class="pi pi-discord"></i>&nbsp;POWERED BY DISCORD
