--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,10 @@
   --font-family: 'Roboto', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: var(--font-family);
   -webkit-font-smoothing: antialiased;
