--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.validation-error {
+  color: #fca5a5;
+  margin-bottom: 1rem;
+}
