--- a/src/app/components/room-booking-form/room-booking-form.component.html
+++ b/src/app/components/room-booking-form/room-booking-form.component.html
@@ -1,6 +1,6 @@
 @if (showBookPanel()) {
-  <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
-    <div>
+  <p-card>
+    <div class="surface-card p-4 shadow-2 border-round bg-dark:w-6">
       <label
         for="name"
         class="block text-900 font-medium mb-2"
@@ -64,10 +64,10 @@
       <p-datepicker
         [(ngModel)]="bookRoomFormEndDate"
         [showIcon]="true"
+        class="mb-3"
         inputId="buttondisplay"
         [showOnFocus]="false"
-        placeholder="Date"
-        class="mb-3" />
+        placeholder="Date" />
 
       <label
         for="package"
@@ -78,8 +78,8 @@
         [options]="paymentOptions"
         (ngModel)="(value)"
         [multiple]="true"
-        class="mb-3"
         id="package"
+        class="mb-3"
         optionLabel="name"
         optionValue="value" />
 
@@ -92,5 +92,5 @@
         icon="pi pi-user"
         class="w-full"></button>
     </div>
-  </div>
+  </p-card>
 }
