changes in RoomBookingFormComponent

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -7,20 +7,25 @@
         Experience unforgettable gaming moments in your own private room – where fun meets comfort
         and excitement.
       </p>
-      <button
-        pButton
-        pRipple
-        label="Get started"
-        aria-label="Get started"
-        type="button"
-        class="mr-3 p-button-raised"></button>
-      <button
-        pButton
-        pRipple
-        label="Join us"
-        aria-label="Join us"
-        type="button"
-        class="p-button-outlined"></button>
+      <a href="#pricing-plans">
+        <button
+          pButton
+          pRipple
+          label="Get started"
+          aria-label="Get started"
+          type="button"
+          class="mr-3 p-button-raised"></button>
+      </a>
+      <a href="#join-us">
+        <button
+          pButton
+          pRipple
+          href="#join-us"
+          label="Join us"
+          aria-label="Join us"
+          type="button"
+          class="p-button-outlined"></button>
+      </a>
     </section>
   </div>
   <div class="col-12 md:col-6 overflow-hidden">
