--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,38 +1,43 @@
-<div class="grid grid-nogutter surface-section text-800">
-  <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center">
-    <section>
-      <span class="block text-6xl font-bold mb-1">Craft the Game Rooms</span>
-      <div class="text-6xl text-primary font-bold mb-3">Your Players Crave to Explore</div>
-      <p class="mt-0 mb-4 text-700 line-height-3">
-        Experience unforgettable gaming moments in your own private room – where fun meets comfort
-        and excitement.
-      </p>
-      <a href="#pricing-plans">
-        <button
-          pButton
-          pRipple
-          label="Get started"
-          aria-label="Get started"
-          type="button"
-          class="mr-3 p-button-raised"></button>
-      </a>
-      <a href="#join-us">
-        <button
-          pButton
-          pRipple
-          href="#join-us"
-          label="Join us"
-          aria-label="Join us"
-          type="button"
-          class="p-button-outlined"></button>
-      </a>
-    </section>
-  </div>
-  <div class="col-12 md:col-6 overflow-hidden">
-    <img
-      src="assets/images/hero.jpg"
-      alt="Image"
-      class="md:ml-auto block md:h-full"
-      style="clip-path: polygon(8% 0, 100% 0%, 100% 100%, 0 100%)" />
+<div class="p-container">
+  <div class="grid grid-nogutter surface-section text-800">
+    <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center">
+      <section>
+        <span class="block text-6xl font-bold mb-1">Create the Ultimate Game Rooms Your Players Won't Want to Leave</span>
+        <div class="text-6xl text-primary font-bold mb-3"></div>
+        <p class="mt-0 mb-4 text-700 line-height-3">
+          Step into your own private gaming paradise, where adventure, comfort, and excitement collide!
+          Our game rooms are designed to elevate your experience with cutting-edge setups,
+          cozy atmospheres, and endless fun. Whether you're gearing up for an intense competition
+          or simply looking to unwind with friends, each room is tailored to create unforgettable
+          memories. Get ready to dive into the action in a space made for your perfect gaming moment!
+        </p>
+        <a href="#pricing-plans">
+          <button
+            pButton
+            pRipple
+            label="Get started"
+            aria-label="Get started"
+            type="button"
+            class="mr-3 p-button-raised"></button>
+        </a>
+        <a href="#join-us">
+          <button
+            pButton
+            pRipple
+            href="#join-us"
+            label="Join us"
+            aria-label="Join us"
+            type="button"
+            class="p-button-outlined"></button>
+        </a>
+      </section>
+    </div>
+    <div class="col-12 md:col-6 overflow-hidden">
+      <img
+        src="assets/images/hero.jpg"
+        alt="Image"
+        class="md:ml-auto block md:h-full"
+        style="clip-path: polygon(8% 0, 100% 0%, 100% 100%, 0 100%)" />
+    </div>
   </div>
 </div>
