Change code style according linter warnings

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -2,14 +2,17 @@
   <div class="grid grid-nogutter surface-section text-800">
     <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center">
       <section>
-        <span class="block text-6xl font-bold mb-1">Create the Ultimate Game Rooms Your Players Won't Want to Leave</span>
+        <span class="block text-6xl font-bold mb-1"
+          >Create the Ultimate Game Rooms Your Players Won't Want to Leave</span
+        >
         <div class="text-6xl text-primary font-bold mb-3"></div>
         <p class="mt-0 mb-4 text-700 line-height-3">
-          Step into your own private gaming paradise, where adventure, comfort, and excitement collide!
-          Our game rooms are designed to elevate your experience with cutting-edge setups,
-          cozy atmospheres, and endless fun. Whether you're gearing up for an intense competition
-          or simply looking to unwind with friends, each room is tailored to create unforgettable
-          memories. Get ready to dive into the action in a space made for your perfect gaming moment!
+          Step into your own private gaming paradise, where adventure, comfort, and excitement
+          collide! Our game rooms are designed to elevate your experience with cutting-edge setups,
+          cozy atmospheres, and endless fun. Whether you're gearing up for an intense competition or
+          simply looking to unwind with friends, each room is tailored to create unforgettable
+          memories. Get ready to dive into the action in a space made for your perfect gaming
+          moment!
         </p>
         <a href="#pricing-plans">
           <button
