--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -8,9 +8,10 @@
       <p-accordion-content>
         <p class="m-0">
           We’ve got something for every type of gamer! Dive into the latest blockbuster video games
-          on top-of-the-line consoles, immerse yourself in thrilling virtual reality experiences,
-          or unwind with timeless classics and modern board games. Whether you’re here for fast-paced
-          action, strategy, or fun with friends, you'll find the perfect game to fuel your excitement!
+          on top-of-the-line consoles, immerse yourself in thrilling virtual reality experiences, or
+          unwind with timeless classics and modern board games. Whether you’re here for fast-paced
+          action, strategy, or fun with friends, you'll find the perfect game to fuel your
+          excitement!
         </p>
       </p-accordion-content>
     </p-accordion-panel>
@@ -23,8 +24,8 @@
         <p class="m-0">
           While you’re always welcome to walk in, we highly recommend booking a spot in advance,
           especially if you're coming with a group or during peak hours. That way, you’ll guarantee
-          your place in the action! Reservations are quick and easy to make online,
-          or feel free to give us a call – we’ll make sure your spot is ready for you!
+          your place in the action! Reservations are quick and easy to make online, or feel free to
+          give us a call – we’ll make sure your spot is ready for you!
         </p>
       </p-accordion-content>
     </p-accordion-panel>
@@ -33,10 +34,10 @@
       <p-accordion-header>Are food and drinks available at the game bar?</p-accordion-header>
       <p-accordion-content>
         <p class="m-0">
-          Oh yes, and they’re just as awesome as the games!
-          Our menu is packed with mouthwatering snacks, hearty meals, and a range of refreshing drinks,
-          from classic cocktails to non-alcoholic delights. Satisfy your cravings while you’re in the
-          middle of a gaming marathon – because no game is complete without some great food and drinks!
+          Oh yes, and they’re just as awesome as the games! Our menu is packed with mouthwatering
+          snacks, hearty meals, and a range of refreshing drinks, from classic cocktails to
+          non-alcoholic delights. Satisfy your cravings while you’re in the middle of a gaming
+          marathon – because no game is complete without some great food and drinks!
         </p>
       </p-accordion-content>
     </p-accordion-panel>
@@ -46,10 +47,10 @@
       <p-accordion-content>
         <p class="m-0">
           Absolutely! Want to throw a birthday bash, a corporate event, or just a legendary party
-          with your friends? Our private game rooms and customizable event packages are designed
-          to make your celebration unforgettable. From tailored menus to personalized experiences,
-          we’ve got everything you need to create an epic gaming atmosphere. Contact us today,
-          and let’s make your event one for the books!
+          with your friends? Our private game rooms and customizable event packages are designed to
+          make your celebration unforgettable. From tailored menus to personalized experiences,
+          we’ve got everything you need to create an epic gaming atmosphere. Contact us today, and
+          let’s make your event one for the books!
         </p>
       </p-accordion-content>
     </p-accordion-panel>
@@ -58,11 +59,10 @@
       <p-accordion-header>How do I book a private room?</p-accordion-header>
       <p-accordion-content>
         <p class="m-0">
-          Booking your own private game room is easy and hassle-free.
-          Simply visit our website, choose the room and time that fits your schedule,
-          and book online in just a few clicks. Need help or have questions? Give us a call,
-          and our friendly staff will assist you with every detail to ensure your
-          room is set up exactly the way you want it!
+          Booking your own private game room is easy and hassle-free. Simply visit our website,
+          choose the room and time that fits your schedule, and book online in just a few clicks.
+          Need help or have questions? Give us a call, and our friendly staff will assist you with
+          every detail to ensure your room is set up exactly the way you want it!
         </p>
       </p-accordion-content>
     </p-accordion-panel>
@@ -71,10 +71,9 @@
       <p-accordion-header>Are there age restrictions at the Game Bar?</p-accordion-header>
       <p-accordion-content>
         <p class="m-0">
-          Our Game Bar is designed for gamers of all ages! However,
-          certain games and areas (like VR or our alcohol menu) may have age restrictions.
-          Please check with us when you book, and we'll make sure you're all set to enjoy
-          the experience to the fullest.
+          Our Game Bar is designed for gamers of all ages! However, certain games and areas (like VR
+          or our alcohol menu) may have age restrictions. Please check with us when you book, and
+          we'll make sure you're all set to enjoy the experience to the fullest.
         </p>
       </p-accordion-content>
     </p-accordion-panel>
@@ -84,10 +83,10 @@
       <p-accordion-content>
         <p class="m-0">
           Yes, we love rewarding our guests! We offer special promotions throughout the year,
-          including happy hour deals, birthday discounts, and group booking packages.
-          Be sure to follow us on social media or sign up for our newsletter to stay updated on
-          the latest offers and limited-time deals. You never know when the next epic promotion
-          will drop – and we don’t want you to miss out!
+          including happy hour deals, birthday discounts, and group booking packages. Be sure to
+          follow us on social media or sign up for our newsletter to stay updated on the latest
+          offers and limited-time deals. You never know when the next epic promotion will drop – and
+          we don’t want you to miss out!
         </p>
       </p-accordion-content>
     </p-accordion-panel>
@@ -96,11 +95,11 @@
       <p-accordion-header>Can I bring my own games or equipment?</p-accordion-header>
       <p-accordion-content>
         <p class="m-0">
-          We’ve got everything you need for a fantastic gaming experience,
-          but if you’ve got a special game or gear you want to bring, feel free to bring it along!
-          Just check with us ahead of time to make sure it’s compatible with our setup.
-          Whether it’s a custom controller, your favorite board game, or a special VR headset,
-          we’re happy to accommodate your personal gaming gear!
+          We’ve got everything you need for a fantastic gaming experience, but if you’ve got a
+          special game or gear you want to bring, feel free to bring it along! Just check with us
+          ahead of time to make sure it’s compatible with our setup. Whether it’s a custom
+          controller, your favorite board game, or a special VR headset, we’re happy to accommodate
+          your personal gaming gear!
         </p>
       </p-accordion-content>
     </p-accordion-panel>
