--- a/src/app/components/room-booking-form/room-booking-form.component.html
+++ b/src/app/components/room-booking-form/room-booking-form.component.html
@@ -9,17 +9,17 @@
       <input
         pInputText
         id="name"
-        [formControl]="bookRoomFormName"
+        [formControl]="bookRoomForm.controls.name"
         type="text"
-        placeholder="Enter your name"
+        placeholder="Enter name"
         pInputText
         [ngClass]="{
-          'ng-invalid ng-dirty': bookRoomFormSurname.invalid && bookRoomFormSurname.touched,
+          'ng-invalid ng-dirty': bookRoomForm.controls.name.valid,
         }"
         class="w-full mb-3" />
 
-      @if (bookRoomFormName.invalid && bookRoomFormName.touched) {
-        <div class="validation-error">Name is required.</div>
+      @if (bookRoomForm.controls.name.invalid && bookRoomForm.controls.name.touched) {
+        <div class="validation-error">Name is required</div>
       }
 
       <label
@@ -30,17 +30,40 @@
       <input
         pInputText
         id="surname"
-        [formControl]="bookRoomFormSurname"
+        [formControl]="bookRoomForm.controls.surname"
         type="text"
-        placeholder="Enter your surname"
+        placeholder="Enter surname"
         pInputText
         [ngClass]="{
-          'ng-invalid ng-dirty': bookRoomFormSurname.invalid && bookRoomFormSurname.touched,
+          'ng-invalid ng-dirty':
+            bookRoomForm.controls.surname.invalid && bookRoomForm.controls.surname.touched,
         }"
         class="w-full mb-3" />
 
-      @if (bookRoomFormSurname.invalid && bookRoomFormSurname.touched) {
-        <div class="validation-error">Surname is required.</div>
+      @if (bookRoomForm.controls.surname.invalid && bookRoomForm.controls.surname.touched) {
+        <div class="validation-error">Surname is required</div>
+      }
+
+      <label
+        for="email"
+        class="block text-900 font-medium mb-2"
+        >Email</label
+      >
+      <input
+        pInputText
+        id="email"
+        [formControl]="bookRoomForm.controls.email"
+        type="text"
+        placeholder="Enter email"
+        pInputText
+        [ngClass]="{
+          'ng-invalid ng-dirty':
+            bookRoomForm.controls.email.invalid && bookRoomForm.controls.email.touched,
+        }"
+        class="w-full mb-3" />
+
+      @if (bookRoomForm.controls.email.invalid && bookRoomForm.controls.email.touched) {
+        <div class="validation-error">Email is required</div>
       }
 
       <label
@@ -49,20 +72,19 @@
         >Select start date</label
       >
       <p-datepicker
-        [(ngModel)]="bookRoomFormStartDate"
+        [formControl]="bookRoomForm.controls.startDate"
         [showIcon]="true"
         inputId="buttondisplay"
         [showOnFocus]="false"
-        placeholder="Date"
-        class="mb-3" />
+        placeholder="Date" />
 
       <label
         for="package"
-        class="block text-900 font-medium mb-2"
+        class="block text-900 font-medium mt-3 mb-2"
         >Select end date</label
       >
       <p-datepicker
-        [(ngModel)]="bookRoomFormEndDate"
+        [formControl]="bookRoomForm.controls.endDate"
         [showIcon]="true"
         class="mb-3"
         inputId="buttondisplay"
@@ -71,35 +93,33 @@
 
       <label
         for="package"
-        class="block text-900 font-medium mb-2"
-        >Set package</label
+        class="block text-900 font-medium mt-3 mb-2"
+        >Set pricing plan</label
       >
+
       <p-selectbutton
-        [options]="paymentOptions"
-        (ngModel)="(value)"
-        [multiple]="true"
-        id="package"
-        class="mb-3"
-        optionLabel="name"
+        [options]="stateOptions"
+        [(ngModel)]="value"
+        optionLabel="label"
         optionValue="value" />
-
-      <button
-        pButton
-        pRipple
-        (click)="save.emit()"
-        label="Book room"
-        aria-label="Book room"
-        icon="pi pi-user"
-        class="w-full mb-3"></button>
-
-      <button
-        pButton
-        pRipple
-        (click)="cancel.emit()"
-        label="Cancel"
-        aria-label="Cancel room booking"
-        icon="pi pi-user"
-        class="w-full p-button-outlined"></button>
     </div>
+
+    <button
+      pButton
+      pRipple
+      (click)="bookRoom()"
+      label="Book room"
+      aria-label="Book room"
+      icon="pi pi-user"
+      class="w-full mb-3"></button>
+
+    <button
+      pButton
+      pRipple
+      (click)="cancel.emit()"
+      label="Cancel"
+      aria-label="Cancel room booking"
+      icon="pi pi-user"
+      class="w-full p-button-outlined"></button>
   </p-card>
 }
