Add discord navigation feature

--- a/src/app/components/join-us/join-us.component.html
+++ b/src/app/components/join-us/join-us.component.html
@@ -17,6 +17,8 @@
       label="Join Now"
       aria-label="Join Now"
       icon="pi pi-discord"
-      class="font-bold px-5 py-3 p-button-raised p-button-rounded white-space-nowrap"></button>
+      class="font-bold px-5 py-3 p-button-raised p-button-rounded white-space-nowrap"
+      (click)="openDiscord()">
+    </button>
   </div>
 </div>
