--- a/src/app/components/join-us/join-us.component.html
+++ b/src/app/components/join-us/join-us.component.html
@@ -18,7 +18,6 @@
       aria-label="Join Now"
       icon="pi pi-discord"
       class="font-bold px-5 py-3 p-button-raised p-button-rounded white-space-nowrap"
-      (click)="openDiscord()">
-    </button>
+      (click)="openDiscord()"></button>
   </div>
 </div>
