--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -36,7 +36,7 @@
       </section>
     </div>
     <div class="col-12 md:col-6 overflow-hidden">
-      <img
+      <p-image
         src="assets/images/hero.jpg"
         alt="Image"
         class="md:ml-auto block md:h-full"
