added authorization buttons + staling fixed

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -29,4 +29,29 @@
       }
     </a>
   </ng-template>
+  <ng-template #end>
+    @if (isUserAuthorized) {
+      <p-avatar
+        image="./assets/images/avatar.png"
+        class="mr-2"
+        shape="circle" />
+    } @else {
+      <button
+        pButton
+        pRipple
+        [routerLink]="['authorize']"
+        label="Sign in"
+        aria-label="Sign In"
+        icon="pi pi-user"
+        class="mr-2"></button>
+
+      <button
+        pButton
+        pRipple
+        [routerLink]="['authorize']"
+        label="Sign out"
+        aria-label="Sign out"
+        icon="pi pi-user-plus"></button>
+    }
+  </ng-template>
 </p-menubar>
