--- a/src/app/components/room-booking-form/room-booking-form.component.html
+++ b/src/app/components/room-booking-form/room-booking-form.component.html
@@ -1,6 +1,6 @@
 @if (showBookPanel()) {
   <p-card>
-    <div class="surface-card p-4 shadow-2 border-round bg-dark:w-6">
+    <div class="p-4 bg-dark:w-6">
       <label
         for="name"
         class="block text-900 font-medium mb-2"
@@ -101,25 +101,26 @@
         [options]="stateOptions"
         [(ngModel)]="value"
         optionLabel="label"
-        optionValue="value" />
+        optionValue="value"
+        class="mb-3" />
+
+      <button
+        pButton
+        pRipple
+        (click)="bookRoom()"
+        label="Book room"
+        aria-label="Book room"
+        icon="pi pi-user"
+        class="w-full mb-3"></button>
+
+      <button
+        pButton
+        pRipple
+        (click)="cancel.emit()"
+        label="Cancel"
+        aria-label="Cancel room booking"
+        icon="pi pi-user"
+        class="w-full p-button-outlined"></button>
     </div>
-
-    <button
-      pButton
-      pRipple
-      (click)="bookRoom()"
-      label="Book room"
-      aria-label="Book room"
-      icon="pi pi-user"
-      class="w-full mb-3"></button>
-
-    <button
-      pButton
-      pRipple
-      (click)="cancel.emit()"
-      label="Cancel"
-      aria-label="Cancel room booking"
-      icon="pi pi-user"
-      class="w-full p-button-outlined"></button>
   </p-card>
 }
