--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -4,7 +4,9 @@
     id="about-us">
     <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center">
       <section>
-        <h2 class="block text-6xl font-bold mb-1">
+        <h2
+          class="block text-6xl font-bold mb-1"
+          i18n>
           Welcome to the Ultimate Game Bar – Where Fun and Games Come Alive!
         </h2>
 
